2008-12-13  Uros Bizjak  <ubizjak@gmail.com>

	* gcc.target/i386/sse-12.c: Include x86intrin.h.
	(dg-options): Use -mavx instead of -msse4. Add -maes -mpclmul.
	* gcc.target/i386/sse-13.c: Include x86intrin.h. Define immintrin.h
	intrinsics that require immediate arguments.
	(dg-options): Use -mavx instead of -msse4.
	* gcc.target/i386/sse-14.c: Include x86intrin.h. Define immintrin.h
	intrinsics that require immediate arguments.
	(test_3): New macro.
	(dg-options): Use -mavx instead of -msse4.
	* g++.dg/other/i386-2.C: Include x86intrin.h.
	(dg-options): Use -mavx instead of -msse4.
	* g++.dg/other/i386-3.C: Include x86intrin.h.
	(dg-options): Use -mavx instead of -msse4.

2008-12-12  Uros Bizjak <ubizjak@gmail.com>

	PR testsuite/38163
	* gcc.dg/tree-ssa/loop-3.c: Compile only on nonpic x86 targets.
	Remove dg-skip-if directive.

2008-12-12  Janis Johnson  <janis187@us.ibm.com>

	PR libgfortran/24685
	* gfortran.dg/default_format_denormal_2.f90: Change XFAIL to check
	for size of long double.

	PR objc++/31032
	* obj-c++.dg/bitfield-1.mm: Remove XFAIL for ICE.

	* gcc.dg/pr35442.c: Ignore a possible warning.

2008-12-12  Zdenek Dvorak  <ook@ucw.cz>

	PR tree-optimization/32044
	* gcc.dg/pr34027-1.c: Change outcome.
	* gcc.dg/tree-ssa/pr32044.c: New test.

2008-12-12  Janis Johnson  <janis187@us.ibm.com>

	PR target/11594
	* gcc.dg/20020103-1.c: Remove XFAIL for powerpc.

2008-12-12  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/38409
	* gcc.dg/graphite/pr38409.c: New.

2008-12-12 Daniel Franke  <franke.daniel@gmail.com>

	PR fortran/36355
	* gfortran.dg/matmul_argument_types.f90: New.

2008-12-11  Janis Johnson  <janis187@us.ibm.com>

	PR testsuite/29071
	* gcc.dg/20020919-1.c: Fix a preprocessor check.

2008-12-11  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/38413
	* gcc.dg/graphite/pr38413.c: New.

2008-12-11  Sebastian Pop  <sebastian.pop@amd.com>

	PR middle-end/37857
	* gfortran.dg/graphite/pr37857.f90: New.
